SUBDIRS = \
  src\
  pixmaps\
  python

messyfrontdesktopdir = $(prefix)/share/applications

messyfrontdesktop_DATA = \
  messyfront.desktop

messyfrontdocdir = $(prefix)/share/doc/messyfront

messyfrontdoc_DATA = \
  README\
  COPYING\
  AUTHORS\
  ChangeLog\
  INSTALL\
  NEWS\
  TODO

EXTRA_DIST = \
  $(messyfrontdesktop_DATA)\
  $(messyfrontdoc_DATA)

