AC_INIT(configure.in)
AM_INIT_AUTOMAKE(messyfront, 19)
AC_PREFIX_DEFAULT("/usr")
AM_CONFIG_HEADER(config.h)

CFLAGS=""
AC_SUBST(CFLAGS)
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="gtk+-2.0 >= 2.0.0 libglade-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
pixmaps/Makefile
python/Makefile
])
  
